propsal component made and added to routing system

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -2,5 +2,6 @@
 
 <a routerLink="/home">home</a>
 <a routerLink="/documents">docs</a>
+<a routerLink="/proposals">propsals</a>
 
 <router-outlet></router-outlet>
