--- a/app/proposal/proposal-list.component.html
+++ b/app/proposal/proposal-list.component.html
@@ -1,1 +1,4 @@
 <h1>Propsal List</h1>
+<div *ngFor="let proposal of proposals">
+  {{ proposal.id}}- {{proposal.customer}}: {{proposal.portfolio_url}}
+</div>
