proposals and proposal entry form

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -3,5 +3,6 @@
 <a routerLink="/home">home</a>
 <a routerLink="/documents">docs</a>
 <a routerLink="/proposals">propsals</a>
+<a routerLink="/proposals/new">New Proposal</a>
 
 <router-outlet></router-outlet>
