--- a/app/Documents/documents.component.html
+++ b/app/Documents/documents.component.html
@@ -1,16 +1,22 @@
-<h1>{{ pageTitle }}</h1>
-
-<div *ngFor="let doc of documents">
-  <h3>{{ doc.title }}</h3>
-  <em>{{ doc.description}}</em>
-  <div>
-    <a href="{{ doc.file_url }}">download file</a>
+<div class="container">
+  <h1>{{ pageTitle }}</h1>
+  <div class="card mb-3" *ngFor="let doc of documents">
+    <img class="card-img-top" src="{{ doc.image_url }}" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">{{ doc.title }}</h5>
+      <p class="card-text">{{ doc.description}}</p>
+      <div>
+        <a class="btn btn-lg btn-primary" href="{{ doc.file_url }}">download file</a>
+      </div>
+      <p class="card-text"><small class="text-muted">Last updated {{ doc.updated_at }}</small></p>
+    </div>
   </div>
-  <p>
-    {{ doc.updated_at }}
-  </p>
-  <p>
-    {{ doc.image_url }}
-  </p>
-  <hr>
+  
+  <div class="card mb-3">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      
+    </div>
+  </div>
 </div>
+
