--- a/app/app.component.css
+++ b/app/app.component.css
@@ -2,3 +2,25 @@
   margin-top: 80px;
 }
 
+.nav-styles{
+  background-color: #1a1b22
+}
+
+.nav-styles a{
+  color: white;
+}
+.nav-styles a:hover{
+  color: #c9c9c9;
+}
+
+.nav-link.active{
+  color: #e64759 !important;
+}
+
+.dropdown-menu a{
+  color: #1a1b22;
+}
+
+.dropdown-menu a:hover{
+  color: #252830;
+}
