--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-fixed-top navbar-light bg-light navbar-expand-sm">
+<nav class="navbar navbar-fixed-top navbar-light navbar-expand-sm nav-styles">
   <div class='container'>
     <ul class="navbar-nav">
       <li class='nav-item'>
