proposal style changes, focus on list view

--- a/app/proposal/proposal-list.component.html
+++ b/app/proposal/proposal-list.component.html
@@ -1,4 +1,20 @@
-<h1>Propsal List</h1>
-<div *ngFor="let proposal of proposals">
-  <a routerLink="/proposal/{{proposal.id}}">{{ proposal.id}}- {{proposal.customer}}: {{proposal.portfolio_url}}</a>
+<div class='container'>
+  <div class="list-group">
+    <a class="list-group-item list-group-item-action flex-column align-items-start active">
+      <div class="d-flex w-100 justify-content-between">
+        <h1 class="headline">Propoooooosal List</h1>
+      </div>
+    </a>
+
+  </div>
+  <span *ngFor="let proposal of proposals" class="list-group-item list-group-item-action flex-column align-items-start">
+    <a routerLink="/proposal/{{proposal.id}}" class='proposal-link'>
+      <h5 class="mb-1">{{proposal.customer}}</h5>
+      <p class="mb-1">
+        {{ proposal.hourly_rate * proposal.estimated_hours | currency:'USD':true:".0"}}
+      </p>
+    </a>
+    
+  </span>
 </div>
+
