--- a/app/homepage/homepage.component.html
+++ b/app/homepage/homepage.component.html
@@ -1,3 +1,6 @@
-<h1>Home</h1>
-
-<p>here is my page and stuff</p>
+<div class="container">
+  <div class="jumbotron">
+    <h1>Freelancer Dashboard</h1>
+    <p class="lead">Everything you need to manage you freelance business.</p>
+  </div>
+</div>
