--- a/app/proposal/proposal-show.component.html
+++ b/app/proposal/proposal-show.component.html
@@ -1,5 +1,10 @@
-<h1>Proposal Show</h1>
+<div class="container">
+  <div class="card proposal-card">
+    <h1>Proposal Show</h1>
 
-<div>
-  the id this proposal is {{ id }}
+    <div>
+      the id of this proposal is {{ id }}
+    </div>
+  </div>
 </div>
+
